--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "typewriter-cli",
   "version": "1.0.0",
   "files": [
-    "cli.js"
+    "cli.js",
+    "type.js"
   ],
+  "main": "index.js",
   "bin": {
     "typewriter": "cli.js"
   },
